istio/deployment-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetingsapp
  namespace: testing
  labels:
    app: greetings
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greetings
  template:
    metadata:
      labels:
        app: greetings
    spec:
      containers:
      - name: greetings
        image: flyingwhale/greetingsrepo
        ports:
        - containerPort: 80
        imagePullPolicy: Always
