istio/service-testing.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings-svc
  namespace: testing
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: greetings
