istio/virtualservice-testing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetings-testing
  namespace: default
spec:
  hosts:
  - "istio.greetings.io"
  gateways:
  - greetings-gateway
  http:
  - match:
    - uri:
        prefix: /testing/hai/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: greetings-svc.testing.svc.cluster.local
