istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetings
spec:
  hosts:
  - "istio.greetings.io"
  gateways:
  - greetings-gateway
  http:
  - match:
    - uri:
        prefix: /hai
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: greetings-svc
